Directly updated in GtitHub

--- a/clinic/doctor/static/login.html
+++ b/clinic/doctor/static/login.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <!-- first line of change to check GIT  -->
+    <!-- I have updated in GIT hub directly -->
   <header>
     <div class="main">
       <div class="logo">
